<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="tvTitle">Android Weather App</string>
    <string name="etCityHint">Enter City Here</string>
    <string name="tvResultsHere">Results Appear Here</string>
    <string name="btnGetTemperature">Get Temp</string>
    <string name="btnClear">Clear</string>
    <string name="splashScreenTitle">Android Weather App</string>
</resources>